# backup-solution

./: Cargo.toml  README.md  package-lock.json  package.json
basic_ui_call/: package.json  webpack.config.js
basic_ui_call/src/: index.js
dnas/dna_ssi/workdir/: dna.yaml
dnas/dna_ssi/zomes/coordinator/backup/: Cargo.toml
dnas/dna_ssi/zomes/coordinator/backup/src/: credential.rs  lib.rs  utility.rs
dnas/dna_ssi/zomes/integrity/backup_integrity/: Cargo.toml
dnas/dna_ssi/zomes/integrity/backup_integrity/src/: credential.rs  lib.rs
tests/src/dna_ssi/backup/: credential.test.ts
ui/: tsconfig.tsbuildinfo
ui/out-tsc/: holochain-app.js  holochain-app.js.map
ui/out-tsc/dna_ssi/backup/: create-credential.js  create-credential.js.map  credential-detail copy.js  credential-detail copy.js.map  credential-detail.js  credential-detail.js.map  credential.js  credential.js.map
ui/src/: holochain-app.ts
ui/src/dna_ssi/backup/: create-credential.ts  credential-detail.ts  credential.ts
workdir/: happ.yaml  web-happ.yaml
