[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.1"
hdk = "0.0.157"
serde = "1"

[workspace.dependencies.backup]
path = "dnas/dna_ssi/zomes/coordinator/backup"

[workspace.dependencies.backup_integrity]
path = "dnas/dna_ssi/zomes/integrity/backup_integrity"
